# Hippobot_Survivors

./: README.md
Hippobot_mapping/: CMakeLists.txt
Hippobot_mapping/launch/: launch.py
Hippobot_mapping/scripts/: map_node.py  obstacle_node.py
Hippobot_mapping/src/: DetectAndPublishCentroids.cpp  FillMap.cpp
mapping/: package.xml
mapping/launch/: mapping.py
mapping/src/: FillMap.cpp
move/: CMakeLists.txt  package.xml
move/include/: boat.h  covariances.h  gps2enu.h  tf_listener.h
move/launch/: WaypointFollower.py  config.rviz  ekf_launch.py
move/params/: ekf.yaml
move/scripts/: place_frame.py  tracker.py
move/src/: StampingCall.cpp  waypoint_publisher.cpp
